--- a/src/index.css
+++ b/src/index.css
@@ -67,9 +67,9 @@ body {
 
 /* src/components/Card.css */
 .card {
-  width: 300px;
-  height: 400px;
-  perspective: 1000px;
+  width: 100%;
+  height: 100%;
+ 
 }
 
 .card-inner {
@@ -78,9 +78,11 @@ body {
   position: relative;
   transition: transform 0.6s;
   transform-style: preserve-3d;
+  object-position: center;
 }
 
 .card-front, .card-back {
+  object-position: center;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -99,15 +101,18 @@ body {
 
 /* src/components/Carousel.css */
 .carousel-container {
+  width: 100%;
+  height: 100%;
+  object-position: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
+  
 }
 
 .carousel {
-  width: 300px;
-  height: 400px;
+  
+  object-position: center;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -117,6 +122,7 @@ body {
 .carousel-card {
   width: 100%;
   height: 100%;
+  object-position: center;
 }
 
 .carousel-button {
