--- a/src/index.css
+++ b/src/index.css
@@ -72,14 +72,14 @@ body {
  
 }
 
-.card-inner {
+/* .card-inner {
   width: 100%;
   height: 100%;
   position: relative;
   transition: transform 0.6s;
   transform-style: preserve-3d;
   object-position: center;
-}
+} */
 
 .card-front, .card-back {
   object-position: center;
@@ -94,7 +94,8 @@ body {
 }
 
 .card-back {
-  background: #007bff;
+  background: #101010;
+  opacity: 100;
   color: white;
   transform: rotateY(180deg);
 }
@@ -127,7 +128,7 @@ body {
 }
 
 .carousel-button {
-  background: #007bff;
+  background: #101010;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -147,7 +148,7 @@ body {
 }
 
 .carousel-button:hover {
-  background: #0056b3;
+  background: #101010;
 }
 
 /* Input Field Background and Text Color */
