--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
- 
 }
 body {
   font-family: "Poppins", sans-serif;
-  
+
   height: 100%;
   width: 100%;
 }
@@ -30,20 +29,17 @@ body {
 .child1 {
   position: absolute; /* Absolute positioning */
   top: 40%;
-  left: 40%; 
+  left: 40%;
   transform: translate(-50%, -50%);
   rotate: -6deg;
- 
 }
 
 .child2 {
   position: absolute; /* Absolute positioning */
   top: 60%;
-  left: 60%; 
+  left: 60%;
   transform: translate(-50%, -50%);
   rotate: 12deg;
- 
- 
 }
 
 /* src/App.css */
@@ -62,14 +58,10 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-
-
-
 /* src/components/Card.css */
 .card {
   width: 100%;
   height: 100%;
- 
 }
 
 /* .card-inner {
@@ -81,7 +73,8 @@ body {
   object-position: center;
 } */
 
-.card-front, .card-back {
+.card-front,
+.card-back {
   object-position: center;
   position: absolute;
   width: 100%;
@@ -109,7 +102,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  
 }
 
 .carousel {
@@ -153,7 +145,7 @@ body {
 
 /* Input Field Background and Text Color */
 .tagify__input {
- /* Dark background for the input */
+  /* Dark background for the input */
   color: #ffffff; /* White text color */
 }
 
@@ -220,13 +212,13 @@ body {
   width: 24px;
   border-radius: 24px;
   background-color: black;
-  position: fixed; 
+  position: fixed;
   top: 0;
   left: 0;
   pointer-events: none;
   z-index: 99999999; /* so that it stays on top of all other elements */
 }
 
-body{
-  cursor:none
+body {
+  cursor: none;
 }
